--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -331,8 +331,19 @@ body {
   overflow-y: auto;
 }
 
+.time-filter {
+  /* filter: brightness(1.1) contrast(0.95) saturate(0.9) hue-rotate(0deg); */
+  transition: filter 3s ease-in-out;
+  /* filter: brightness(0.7) contrast(1.05) sepia(10%) saturate(0.8) hue-rotate(140deg); */
+}
+
+.evening-filter {
+  filter: brightness(85%) hue-rotate(340deg) saturate(1.2) contrast(1.1);
+}
+
 .night-filter {
-  filter: grayscale(29%) sepia(36%) brightness(51%) hue-rotate(140deg);
+  /* filter: grayscale(29%) sepia(36%) brightness(51%) hue-rotate(140deg); */
+  filter: brightness(0.6) contrast(1.2) saturate(0.8) hue-rotate(140deg);
 }
 
 .sticky-header {
