feat(pokemon-team): enhance ui/ux for pokemon-team and child components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -233,6 +233,12 @@ body {
   z-index: 10;
 }
 
+/* special layouts*/
+
+.grid-stat-bar {
+  grid-template-columns: 2rem 1fr;
+}
+
 /*grayscale*/
 .grayscale-sm {
   filter: grayscale(25%);
